[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "local"
version = "0.1"
description = "Scripts and tests for a locally deployed Unit network"
dependencies = [
  "solc-select",
  "units-network @ git+https://github.com/UnitsNetwork/examples.git@dao-rewards",
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
keywords = ["units network", "blockchain", "waves"]

[project.urls]
Homepage = "https://github.com/UnitsNetwork/consensus-client/tree/main/local-network"

[tool.setuptools.packages.find]
where = ["."]
